tests/ui/never_type/fallback-closure-wrap.fallback.stderr
error[E0271]: expected `main::{closure Box::new#0}` to return `()`, but it returns `!`
  --> $DIR/fallback-closure-wrap.rs:19:9
   |
LL |     let error = Closure::wrap(Box::new(move || {
   |                                        ------- this closure
LL |         panic!("Can't connect to server.");
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `!`
   |
   = note: expected unit type `()`
                   found type `!`
   = note: required for the cast from `Box<main::{closure Box::new#0}>` to `Box<dyn FnMut()>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
